syntax = "proto3";

package grgc;

option go_package = ".;pb";

message GetUserRequest { uint32 user_id = 1; }

message GetUserResponse {
  uint32 user_id = 1;
  string username = 2;
  string email = 3;
}

service UserService { rpc GetUser(GetUserRequest) returns(GetUserResponse){}; }
